oblig2patch/src/tests/oblig2/errors/undeclared_struct_var_fail.cmp
program undeclared_struct_var_fail
begin
    proc main()
    begin
       struct Zot { x : int } ;
       var zot : Zot
    in 
       zot := new Zot;
       (zot).bar := 42 /* error, zot.bar not declared */
    end
end